docs/platforms/winpack_dldt/2020.2/sub.md
# Subtree Keyword Index for `platforms/winpack_dldt/2020.2/`

## Scope

This keyword index covers **all files** under `platforms/winpack_dldt/2020.2/` recursively, including all subdirectories.

**Statistics:**
- **Total Files in Subtree**: 6
- **Total Unique Keywords**: 249
- **Direct Files**: 6
- **Subfolders**: 0

## Keywords A-Z

The following keywords, identifiers, and technical terms appear in files within this subtree:


### A

**ALIAS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ANDROID** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**APPEND** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**a03a5f23** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add_clang_format_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add_common_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add_cpplint_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add_library** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**add_subdirectory** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**addac6cd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**always** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**and** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**applyPatch** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**are** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### B

**BOOL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**b5913840** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**base** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**bed73503** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**bin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**binaries** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**build** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**build_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_config** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_debug** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_ngraph** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**builds** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**built** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### C

**CACHE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**CMAKE_BINARY_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**CMAKE_BUILD_TYPE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**CMAKE_CURRENT_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_CXX_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_MODULE_PATH** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_SHARED_LINKER_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMakeLists** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**CROSS_COMPILED_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**Create** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**c3ad1e58** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**cache** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cf197376** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**clDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cldnn_global_custom_kernels** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cmake** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**common** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**config** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**configure_file** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**copy_bin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copy_dll** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copytree** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cpp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### D

**DEBUG** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**Debug** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**Developer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**def** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**deployment_tools** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**developer_package** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**developer_package_config** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**diff** - Found in 4 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**directory** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**disable** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**disabled** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**dldt** - Found in 5 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**dll** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**dll_suffix** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### E

**ENABLE_AVX2** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_AVX512F** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_SSE42** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_TESTS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**EXCLUDE_FROM_ALL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**Enable** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**e7ea6547** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**edf8233f** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**elf** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**else** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**endfunction** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**endif** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**engine** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**etc** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**even** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### F

**FALSE** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**FILES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**FORCE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**FOR_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**FOR_TARGETS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**file** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**fix** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**for** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**format_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**function** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))


### G

**GLOB_RECURSE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**gflags** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**git** - Found in 4 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**global** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**graph** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### H

**HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**HeteroPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**hpp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### I

**ICF** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**IE_BASE_SOURCE_FILES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**IE_DEBUG_POSTFIX_WIN** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**IE_MAIN_SOURCE_DIR** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**IMPLEMENT_INFERENCE_ENGINE_API** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**IMPLEMENT_INFERENCE_ENGINE_PLUGIN** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**INTERFACE_INCLUDE_DIRECTORIES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ie_developer_export** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**ie_developer_export_targets** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**include** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**index** - Found in 4 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**inference** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_l** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**inference_engine_legacy** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_legacyd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_lp_transformations** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_nn_builder** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_nn_builderd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_preproc_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**inference_engine_transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engined** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inside** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**install** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**intel64** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### J

**json** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### K

**kept** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### L

**LIBRARY_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**LIBRARY_SRC** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**LICENSE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**legacy_api** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**lib** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**library** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**licenses** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**list** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**location** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))


### M

**MKLDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2450** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma248x** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2x8x** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**mkldnn_create_avx2_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_create_avx512f_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_create_sse42_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx2** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx2_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx512** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx512_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_no_opt** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_no_opt_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_sse42** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_sse42_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_object_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**must** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**mvcmd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**myriadPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### N

**NGRAPH_LIBRARIES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**NGRAPH_ONNX_IMPORT_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**NGRAPH_TEST_UTIL_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**NGRAPH_UNIT_TEST_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**NGRAPH_UNIT_TEST_OPENVINO_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**NN_BUILDER_LIBRARY_SRC** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**NOT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**name** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraph** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**ngraph_set** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**ngraphd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**not** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### O

**OBJECT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**OPT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**OUTPUT_ROOT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**OpenVINO** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**OpenVINO_MAIN_SOURCE_DIR** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**object** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**object_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**options** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))


### P

**PRIVATE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**PUBLIC_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**package** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**patch** - Found in 5 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**pcie** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**pdb** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**platforms** - Found in 6 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**plu** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**plugins** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**postfixes** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**prepare_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**preprocessing** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**project** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))


### R

**REF** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**Release** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**required** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**rm_one** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**runtime** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### S

**SAMPLES_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**STATIC** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**STREQUAL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))

**SYSTEM** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**Static** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**sample_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**samples** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**self** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**set** - Found in 4 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**set_ie_threading_interface_for** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**source_group** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**src** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**srcdir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**support** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**sysroot** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_lib_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_license_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysrootdir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### T

**TAR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**TARGET_NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**TARGET_OBJECTS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**TARGET_PROPERTY** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**TRUE** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))

**target_compile_definitions** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**target_include_directories** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**target_link_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**targets** - Found in 2 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**tbb** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**temp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**test** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**tests** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**they** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**tools** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**txt** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))


### U

**USE_STATIC_IE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**Unit** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**unit** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**unused** - Found in 3 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**usb** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**used** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### V

**vpu** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))


### W

**WIN32** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**which** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**winpack_dldt** - Found in 6 files:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-fix-binaries-location.patch](20200413-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200413-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/20200415-ngraph-disable-unused-options.patch](20200415-ngraph-disable-unused-options.patch_docs.md) ([keywords](20200415-ngraph-disable-unused-options.patch_kw.md))
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.2/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))


### X

**xml** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### _

**_common_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**_legacy_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**_nn_builder_clang_format** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))

**_plugin_api_clang_format** - Found in 1 file:
  - [platforms/winpack_dldt/2020.2/20200413-dldt-disable-unused-targets.patch](20200413-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200413-dldt-disable-unused-targets.patch_kw.md))



## Folder-Level Navigation

### Keyword Distribution by Subfolder



### Most Common Keywords

The most frequently appearing keywords in this subtree:

- **platforms**: 6 occurrences
- **winpack_dldt**: 6 occurrences
- **dldt**: 5 occurrences
- **patch**: 5 occurrences
- **diff**: 4 occurrences
- **set**: 4 occurrences
- **git**: 4 occurrences
- **index**: 4 occurrences
- **inference**: 3 occurrences
- **endif**: 3 occurrences
- **CMakeLists**: 3 occurrences
- **txt**: 3 occurrences
- **disable**: 3 occurrences
- **else**: 3 occurrences
- **unused**: 3 occurrences
- **cmake**: 3 occurrences
- **engine**: 3 occurrences
- **pdb**: 3 occurrences
- **ngraph**: 3 occurrences
- **IE_MAIN_SOURCE_DIR**: 2 occurrences
- **TRUE**: 2 occurrences
- **targets**: 2 occurrences
- **for**: 2 occurrences
- **inference_engine**: 2 occurrences
- **include**: 2 occurrences
- **inference_engine_lp_transformations**: 2 occurrences
- **function**: 2 occurrences
- **FALSE**: 2 occurrences
- **Debug**: 2 occurrences
- **Release**: 2 occurrences
- **location**: 2 occurrences
- **fix**: 2 occurrences
- **binaries**: 2 occurrences
- **OpenVINO_MAIN_SOURCE_DIR**: 2 occurrences
- **edf8233f**: 2 occurrences
- **options**: 2 occurrences
- **config**: 2 occurrences
- **_common_obj**: 1 occurrences
- **ENABLE_SSE42**: 1 occurrences
- **legacy_api**: 1 occurrences
- **common**: 1 occurrences
- **TARGET_OBJECTS**: 1 occurrences
- **ENABLE_AVX512F**: 1 occurrences
- **APPEND**: 1 occurrences
- **vpu**: 1 occurrences
- **built**: 1 occurrences
- **build**: 1 occurrences
- **they**: 1 occurrences
- **SOURCES**: 1 occurrences
- **add_subdirectory**: 1 occurrences
- **_plugin_api_clang_format**: 1 occurrences
- **vpu_common_lib_test_static**: 1 occurrences
- **GLOB_RECURSE**: 1 occurrences
- **samples**: 1 occurrences
- **NGRAPH_LIBRARIES**: 1 occurrences
- **Unit**: 1 occurrences
- **always**: 1 occurrences
- **mkldnn_plugin_layers_avx512**: 1 occurrences
- **test**: 1 occurrences
- **FOR_TARGETS**: 1 occurrences
- **endfunction**: 1 occurrences
- **mkldnn_create_avx2_layers**: 1 occurrences
- **support**: 1 occurrences
- **developer_package_config**: 1 occurrences
- **e7ea6547**: 1 occurrences
- **PUBLIC_HEADERS**: 1 occurrences
- **IE_BASE_SOURCE_FILES**: 1 occurrences
- **ALIAS**: 1 occurrences
- **NN_BUILDER_LIBRARY_SRC**: 1 occurrences
- **IMPLEMENT_INFERENCE_ENGINE_API**: 1 occurrences
- **object**: 1 occurrences
- **source_group**: 1 occurrences
- **inference_engine_l**: 1 occurrences
- **unit**: 1 occurrences
- **mkldnn_plugin_layers_sse42_s**: 1 occurrences
- **configure_file**: 1 occurrences
- **mkldnn_plugin_layers_avx512_s**: 1 occurrences
- **b5913840**: 1 occurrences
- **inference_engine_preproc_s**: 1 occurrences
- **object_libraries**: 1 occurrences
- **FILES**: 1 occurrences
- **LIBRARY_SRC**: 1 occurrences
- **Create**: 1 occurrences
- **WIN32**: 1 occurrences
- **Developer**: 1 occurrences
- **OBJECT**: 1 occurrences
- **mkldnn_plugin_layers_no_opt_s**: 1 occurrences
- **and**: 1 occurrences
- **sample_cpplint**: 1 occurrences
- **LIBRARY_HEADERS**: 1 occurrences
- **format_reader**: 1 occurrences
- **src**: 1 occurrences
- **STATIC**: 1 occurrences
- **used**: 1 occurrences
- **disabled**: 1 occurrences
- **PRIVATE**: 1 occurrences
- **INTERFACE_INCLUDE_DIRECTORIES**: 1 occurrences
- **add_library**: 1 occurrences
- **CROSS_COMPILED_SOURCES**: 1 occurrences
- **HEADERS**: 1 occurrences
